--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -3,3 +3,7 @@
 body {
   margin: 0px;
 }
+
+* * {
+  word-break: break-word;
+}
